k8s_apps_transition_demo/app1/integration/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appOne
  namespace: appOne
  labels:
    name: appOne
    env: integration
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: appOne
            port:
              number: 80
        path: /
        pathType: Prefix
